# token-diet

./: .gitignore  .mcp.json  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/commands/: applychanges.md  begin.md  changeai.md  cleanup.md  clearchat.md  compact.md  findcode.md  lookup.md  model.md  openfile.md  overview.md  patch.md  savings.md  shortreply.md  show.md  showrepo.md  showstats.md  start.md
.github/workflows/: ci.yml
ctx/: __init__.py  cli.py  config.py  proxy.py  registry.py  server.py
ctx/commands/: __init__.py
ctx/engine/: __init__.py  assembler.py  budget.py  docs.py  facade.py  index.py  memory.py  patch.py  repomap.py  router.py  telemetry.py
ctx/init/: __init__.py  claude_code.py  cowork.py  generic.py
docs/: INSTALL.md
tests/: test_engine.py
tests/evals/: test_eval_harness.py
